# embassy-buddy

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.zed/: settings.json
docs/: adc.md  bed_power_monitor.md  buzzer.md  components.md  eeprom.md  ethernet.md  fans.md  filament_sensor.md  flash.md  heaters.md  lcd.md  pinda.md  rotary_button.md  rotary_encoder.md  steppers.md
embassy-buddy/: Cargo.toml  README.md
embassy-buddy/.cargo/: config.toml
embassy-buddy/docs/: thermistor.md
embassy-buddy/examples/: bed_power_monitor.rs  bed_thermistor.rs  board.rs  board_thermistor.rs  buzzer.rs  display_board.rs  display_no_board.rs  eeprom.rs  eth_board.rs  fans.rs  filament.rs  flash.rs  hotend_thermistor.rs  lcd_board.rs  pinda.rs  rotary_button.rs  rotary_encoder.rs  stepper_config.rs  x_stepper.rs  x_stepper_no_uart.rs  z_stepper.rs
embassy-buddy/src/: lib.rs
embassy-buddy/src/components/: adc.rs  bed_power_monitor.rs  buzzer.rs  display.rs  eeprom.rs  ethernet.rs  fan.rs  fans.rs  filament_sensor.rs  flash.rs  heater.rs  heaters.rs  mod.rs  pinda.rs  rotary_button.rs  rotary_encoder.rs  steppers.rs  thermistor.rs  thermistors.rs
embassy-mini/: Cargo.toml
embassy-mini/src/: main.rs
embassy-printer/: Cargo.toml
embassy-printer/src/: lib.rs
embassy-tmc/: Cargo.toml  README.md
embassy-tmc/src/: datagram.rs  direction.rs  errors.rs  fmt.rs  lib.rs  tmc2209.rs
examples/: all_together.rs  bed_thermistor.rs  board.rs  board_thermistor.rs  buzzer.rs  display_no_board.rs  eth_board.rs  eth_no_board.rs  fans.rs  filament.rs  filament_sensor.rs  heater.rs  hello_world.rs  hotend_thermistor.rs  pinda.rs  rotary.rs  rotary_button.rs  rotary_encoder.rs  step.rs  stepper_config.rs  thermistors.rs  x_stepper.rs  x_stepper_no_uart.rs  z_stepper.rs
examples/others/: x_stepper_blocking.rs  x_stepper_buffer.rs
src/: board.rs  buzzer.rs  config.rs  fan.rs  filament_sensor.rs  fmt.rs  heater.rs  lib.rs  pinda.rs  rotary_button.rs  rotary_encoder.rs  thermistor.rs
src/components/: adc.rs  bed_power_monitor.rs  buzzer.rs  display.rs  eeprom.rs  ethernet.rs  fan.rs  fans.rs  filament_sensor.rs  flash.rs  heater.rs  heaters.rs  mod.rs  pinda.rs  rotary_button.rs  rotary_encoder.rs  steppers.rs  thermistor.rs  thermistors.rs
src/components/tmc/: datagram.rs  direction.rs  error.rs  mod.rs  tmc2209.rs
src/tmc2209/: datagram.rs  mod.rs  registers.rs
