[package]
name = "embassy_buddy"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-stm32 = { version = "0.2.0", features = [
	"defmt",
	"stm32f407vg",
	"memory-x",
	"time-driver-tim4",
	"exti",
] }
embassy-executor = { version = "0.7.0", features = [
	"task-arena-size-4096",
	"arch-cortex-m",
	"executor-thread",
	"defmt",
] }
embassy-time = { version = "0.4.0", features = [
	"defmt",
	"defmt-timestamp-uptime",
	"tick-hz-32_768",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
libm = "0.2.11"
packed_struct = { version = "0.10.1", default-features = false }

[profile.release]
debug = 2
