[package]
name = "embassy-mini"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = 2

[dependencies]
cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "stm32f407vg",
    "memory-x",
    "time-driver-tim4",
    "exti",
] }
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-futures = "0.1.1"
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    # Currently limited by 16-bit timer implementation
    # https://docs.embassy.dev/embassy-stm32/git/stm32f407vg/index.html
    # Runs well in release mode.
    "tick-hz-32_768", # Recommended
    #"tick-hz-80_000",
] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
embassy-buddy = { path = "../embassy-buddy" }
embassy-printer = { path = "../embassy-printer" }
#picoserve = { version = "0.16.0", features = ["embassy"] }
