[package]
name = "embassy-tmc"
version = "0.1.0"
edition = "2024"

[features]
default = []
defmt = []

[lib]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
embassy-sync = "0.7.0"
embassy-time = { version = "0.4.0" }
packed_struct = { version = "0.10.1", default-features = false }
defmt = "0.3.10"
thiserror = { version = "2.0.12", default-features = false }
